docs/api/qiskit-ibm-runtime/0.21/options-layer-noise-learning-options.mdx
---
title: LayerNoiseLearningOptions (v0.21)
description: API reference for qiskit_ibm_runtime.options.LayerNoiseLearningOptions in qiskit-ibm-runtime v0.21
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.LayerNoiseLearningOptions
---

# LayerNoiseLearningOptions

<Class id="qiskit_ibm_runtime.options.LayerNoiseLearningOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.21/qiskit_ibm_runtime/options/layer_noise_learning_options.py#L28-L75" signature="LayerNoiseLearningOptions(*args, **kwargs)" modifiers="class">
  Options for learning layer noise.

  <Admonition title="Note" type="note">
    These options are only used when the resilience level or options specify a technique that requires layer noise learning.
  </Admonition>

  **Parameters**

  *   **max\_layers\_to\_learn** – The max number of unique layers to learn. A `None` value indicates that there is no limit. If there are more unique layers present, then some layers will not be learned or mitigated. The learned layers are prioritized based on the number of times they occur in a set of run estimator PUBs, and for equally occurring layers are further sorted by the number of two-qubit gates in the layer.
  *   **shots\_per\_randomization** – The total number of shots to use per random learning circuit. A learning circuit is a random circuit at a specific learning depth with a specific measurement basis that is executed on hardware. Default: 128.
  *   **num\_randomizations** – The number of random circuits to use per learning circuit configuration. A configuration is a measurement basis and depth setting. For example, if your experiment has six depths, and nine required measurement bases, then setting this value to 32 will result in a total of `32 * 9 * 6` circuits that need to be executed (at [`shots_per_randomization`](#qiskit_ibm_runtime.options.LayerNoiseLearningOptions.shots_per_randomization "qiskit_ibm_runtime.options.LayerNoiseLearningOptions.shots_per_randomization") each). Default: 32.
  *   **layer\_pair\_depths** – The circuit depths (measured in number of pairs) to use in learning experiments. Pairs are used as the unit because we exploit the order-2 nature of our entangling gates in the noise learning implementation. A value of `3` would correspond to 6 layers of the layer of interest, for example. Default: (0, 1, 2, 4, 16, 32).

  ## Attributes

  ### layer\_pair\_depths

  <Attribute id="qiskit_ibm_runtime.options.LayerNoiseLearningOptions.layer_pair_depths" attributeTypeHint="UnsetType | List[int]" attributeValue="Unset" />

  ### max\_layers\_to\_learn

  <Attribute id="qiskit_ibm_runtime.options.LayerNoiseLearningOptions.max_layers_to_learn" attributeTypeHint="UnsetType | int | None" attributeValue="Unset" />

  ### num\_randomizations

  <Attribute id="qiskit_ibm_runtime.options.LayerNoiseLearningOptions.num_randomizations" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ### shots\_per\_randomization

  <Attribute id="qiskit_ibm_runtime.options.LayerNoiseLearningOptions.shots_per_randomization" attributeTypeHint="UnsetType | int" attributeValue="Unset" />

  ## Methods
</Class>

